# COMP302

./: ACCEPTANCE_TEST_MATRIX.md  DEMO_CHECKLIST.md  PROMPT_CHANGES.md  README.md  REPO_INFO.txt  REPO_INFO.txt.txt  pyproject.toml
app/: llm_service.py  main.py  services.py
backend/: database.py  inclass.db  init_db.py  main.py  models.py  seed.py  seed_db.py
evidence/: COMMIT_TRACEABILITY.csv  DEFINITION_OF_DONE.md  GLOBAL_CLICKUP_ACTIVITY_LOG  GLOBAL_CLICKUP_TASK_HISTORY  PRODUCT_BACKLOG.md  PRODUCT_GOAL.md  PROMPT_CHANGES.md  SCOPE_CHANGE_LOG_S1.csv  SCOPE_CHANGE_LOG_S2.csv  SPRINT1_BACKLOG.md  SPRINT1_BURNDOWN.md  SPRINT1_DAILY_1.md  SPRINT1_DAILY_2.md  SPRINT1_GOAL.md  SPRINT1_PLANNING.md  SPRINT1_PLANNING_POKER.md  SPRINT1_RETROSPECTIVE.md  SPRINT1_REVIEW.md  SPRINT2_BACKLOG.md  SPRINT2_BURNDOWN.md  SPRINT2_DAILY_1.md  SPRINT2_DAILY_2.md  SPRINT2_GOAL.md  SPRINT2_PLANNING.md  SPRINT2_PLANNING_POKER.md  SPRINT2_RETROSPECTIVE.md  SPRINT2_REVIEW.md
evidence_screenshots/: screenshots comp302.docx
frontend/: activity_history.html  add_activity.html  index.html  instructor_dashboard.html  leaderboard.html  login.html  package-lock.json  (+4 more)
source_code/: README_RUN.md  pyproject.toml
source_code/app/: services.py
source_code/backend/: .env.example  README_RUN.md  database.py  init_db.py  main.py  models.py  requirements.txt  seed.py
source_code/frontend/: api.js  instructor_dashboard.html  login.html  register.html  student_chat.html  style.css
source_code/tests/: test_services.py
source_code/unused_old_pages/: activity_history.html  add_activity.html
(+7 files in other folders)
