[project]
name = "comp302"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "supabase>=2.4.0",
    "python-dotenv>=1.0.1",
    "pydantic-settings>=2.2.1",
    "bcrypt>=4.1.0",
    "uvicorn>=0.29.0"
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]