[project]
name = "comp302-inclass-platform"
version = "0.1.0"
description = "COMP302 InClass Platform term project backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "supabase>=2.10.0",
    "python-dotenv>=1.0.1",
    "bcrypt>=4.2.0",
    "google-genai>=1.0.0",
    "openai>=1.55.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "httpx>=0.27.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = [
    "tests",
    "instructor_tests",
]
python_files = [
    "test_*.py",
    "*_test.py",
]